--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2025 Ajito Company. All Rights Reserved.</p>
+            <p>&copy; 2025 こけしおみくじ制作委員会. All Rights Reserved.</p>
         </div>
     </footer>
 
