--- a/index.html
+++ b/index.html
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
 <html lang="ja">
 
-<head>
+<head prefix="og: https//ogp.me/ns# fb: https//ogp.me/ns/fb# article: https//ogp.me/ns/article#">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-eqive="X-UA-Compatible" content="IE=edge" />
+
+    <!-- OGP Tags -->
+    <meta property="og:title" content="【こけしおみくじ】" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://kokeshi-omikuji-lp.netlify.app/" />
+    <meta property="og:image" content="kokeshiomikuji_lp_ogp.png" />
+    <meta property="og:description" content="ゆる運勢こけしおみくじ" />
+    <meta property="og:site_name" content="こけしおみくじ" />
+
+    <!-- Twitter Card (Optional but recommended) -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:image" content="kokeshiomikuji_lp_ogp.png" />
+    <meta name="twitter:creator" content="@1hayaDSGN" />
+
+
     <title>こけしアプリ - あなたの運勢、こけしが占います</title>
-    <meta name="description" content="「こけしアプリ」は、かわいいこけし達があなたの運勢を占うモバイルアプリです。iOS/Android対応。">
+    <meta name="description" content="こけしおみくじは、かわいいこけし達があなたの運勢を占うです。">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="favicon.ico" id="favicon">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon-180x180.png">
+    <link rel="stylesheet" href="destyle.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
