--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body>
     <header class="header">
         <div class="container">
-            <h1 class="logo">こけしアプリ</h1>
+            <h1 class="logo">こけしおみくじ</h1>
         </div>
     </header>
 
@@ -139,5 +139,6 @@
 
     <script src="script.js"></script>
 </body>
+
 
 </html>
