Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 
-<head prefix="og: https//ogp.me/ns# fb: https//ogp.me/ns/fb# article: https//ogp.me/ns/article#">
+<head prefix="og: https://ogp.me/ns# fb: https//ogp.me/ns/fb# article: https//ogp.me/ns/article#">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-eqive="X-UA-Compatible" content="IE=edge" />
@@ -142,3 +142,4 @@
 
 
 </html>
+
