Fix OGP tags and image URLs in index.html
Updated OGP tags and fixed image URLs.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 
-<head prefix="og: https://ogp.me/ns# fb: https//ogp.me/ns/fb# article: https//ogp.me/ns/article#">
+<head prefix="og: https://ogp.me/ns# fb: https://ogp.me/ns/fb# article: https://ogp.me/ns/article#">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-eqive="X-UA-Compatible" content="IE=edge" />
@@ -10,7 +10,7 @@
     <meta property="og:title" content="【こけしおみくじ】" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://kokeshi-omikuji-lp.netlify.app/" />
-    <meta property="og:image" content="kokeshiomikuji_lp_ogp.png" />
+    <meta property="og:image" content="https://kokeshi-omikuji-lp.netlify.app/kokeshiomikuji_lp_ogp.png" />
     <meta property="og:description" content="ゆる運勢こけしおみくじ" />
     <meta property="og:site_name" content="こけしおみくじ" />
 
@@ -142,4 +142,5 @@
 
 
 </html>
+
 
