--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!-- Twitter Card (Optional but recommended) -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="kokeshiomikuji_lp_ogp.png" />
+    <meta name="twitter:image" content="https://kokeshi-omikuji-lp.netlify.app/kokeshiomikuji_lp_ogp.png" />
     <meta name="twitter:creator" content="@1hayaDSGN" />
 
 
@@ -142,5 +142,6 @@
 
 
 </html>
+
 
 
