--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <meta property="og:title" content="【こけしおみくじ】" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://kokeshi-omikuji-lp.netlify.app/" />
-    <meta property="og:image" content="https://kokeshi-omikuji-lp.netlify.app/kokeshiomikuji_lp_ogp.png" />
+    <meta property="og:image" content="https://kokeshi-omikuji-lp.netlify.app/images/kokeshiomikuji_lp_ogp.png" />
     <meta property="og:description" content="ゆる運勢こけしおみくじ" />
     <meta property="og:site_name" content="こけしおみくじ" />
 
     <!-- Twitter Card (Optional but recommended) -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="https://kokeshi-omikuji-lp.netlify.app/kokeshiomikuji_lp_ogp.png" />
+    <meta name="twitter:image" content="https://kokeshi-omikuji-lp.netlify.app/images/kokeshiomikuji_lp_ogp.png" />
     <meta name="twitter:creator" content="@1hayaDSGN" />
 
 
@@ -25,8 +25,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="icon" href="favicon.ico" id="favicon">
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon-180x180.png">
+    <link rel="icon" href=images/"favicon.ico" id="favicon">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon-180x180.png">
     <link rel="stylesheet" href="destyle.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -142,6 +142,7 @@
 
 
 </html>
+
 
 
 
