--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="icon" href=images/"favicon.ico" id="favicon">
+    <link rel="icon" href="images/favicon.ico" id="favicon">
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon-180x180.png">
     <link rel="stylesheet" href="destyle.css">
     <link rel="stylesheet" href="style.css">
@@ -142,7 +142,3 @@
 
 
 </html>
-
-
-
-
